# swapx

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMANDS.md  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
src/: cli.rs  config.rs  engine.rs  error.rs  executor.rs  interactive.rs  main.rs  models.rs  shell_hook.rs  suggest.rs
suggestions/: builtin.yaml
tests/: cli.rs
